<?xml version="1.0" encoding="utf-8"?>
<com.simplemobiletools.dialer.fragments.RecentsFragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recents_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/recents_filter_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/recents_filter_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedButton="@id/recents_filter_all"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recents_filter_all"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/filter_all"
                android:textAllCaps="false"
                app:checkedIcon="@null"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recents_filter_missed"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/filter_missed"
                android:textAllCaps="false"
                app:checkedIcon="@null"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_missed"
                app:iconPadding="10dp"
                app:iconTint="@color/md_red" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recents_filter_incoming"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/filter_incoming"
                android:textAllCaps="false"
                app:checkedIcon="@null"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_incoming"
                app:iconPadding="10dp"
                app:iconTint="@color/md_green" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recents_filter_outgoing"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/filter_outgoing"
                android:textAllCaps="false"
                app:checkedIcon="@null"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_outgoing"
                app:iconPadding="10dp"
                app:iconTint="@color/color_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recents_filter_spam"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/filter_spam"
                android:textAllCaps="false"
                app:checkedIcon="@null"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_spam"
                app:iconPadding="10dp"
                app:iconTint="@color/md_red" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </HorizontalScrollView>

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/recents_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recents_filter_scroll"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:gravity="center"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:text="@string/no_previous_calls"
        android:textSize="@dimen/bigger_text_size"
        android:textStyle="italic"
        android:visibility="gone" />

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/recents_placeholder_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recents_placeholder"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ripple_all_corners"
        android:gravity="center"
        android:padding="@dimen/activity_margin"
        android:text="@string/request_access"
        android:textSize="@dimen/bigger_text_size"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.simplemobiletools.commons.views.MyRecyclerView
        android:id="@+id/recents_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/recents_filter_scroll"
        android:layout_alignParentBottom="true"
        android:clipToPadding="false"
        android:layoutAnimation="@anim/layout_animation"
        android:paddingBottom="@dimen/_55ssp"
        android:scrollbars="none"
        app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"
        tools:listitem="@layout/item_recent_call" />


</com.simplemobiletools.dialer.fragments.RecentsFragment>
